added scala